20150507 memory.[ch],peripherals/{disk/beta.c,if2.c,spectranet.c}: rename
         memory_map_romcs() to memory_map_romcs_full() (Stuart).
20150507 peripherals/disk/wd_fdc.c: fix WD2797 side selection (more of patch
         #330) (Gergely Szasz).
20150508 peripherals/disk/wd_fdc.c: really fix WD2797 side selection (even more
         of patch #330) (Gergely Szasz).
20150508 peripherals/disk/wd_fdc.c: implement WD2797 side comparison (rest of
         patch #330) (Gergely Szasz).
20150508 peripherals/disk/wd_fdc.c: remove trailing whitespace (Stuart).
20150509 machine.c: only try to load the fallback ROM if it is different to the
         standard one (Fred).
20150510 ui/widget/filesel.c: use PATH_MAX instead of FILENAME_MAX as our
         standard compatibility define (thanks, Brian Ruthven) (Fred).
20150510 ui/widget/filesel.c: use ENTRIES_PER_SCREEN rather than PAGESIZE due
         to name clash on Solaris (thanks, Brian Ruthven) (Fred).
20150510 Makefile.am,m4/pkg.m4: update pkg.m4 and add explicit distribution rule
         for ax_pthread.m4 (Sergio).
20150511 fuse.c,hacking/ChangeLog,machines/machines_periph.c,menu.[ch],
         menu_data.dat,periph.h,peripherals/disk/{Makefile.am,didaktik.[ch],
         disk.[ch],wd_fdc.c},settings.{dat,pl},ui.c,ui/{options.dat,ui.h,
         uimedia.h},utils.c,z80/{coretest.c,z80_checks.h,z80_ops.c}: add
         Didaktik 80/40 emulation (part of patch #331) (Gergely Szasz).
20150511 man/fuse.1: add initial Didaktik 80/40 documentation (Stuart).
20150511 AUTHORS,man/fuse.1: note authorship of ALSA driver and Didaktik 80
         emulation (Stuart).
20150511 peripherals/{ay.c,disk/{beta.c,didaktik.c,disciple.c,opus.c,plusd.c},
         fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,if2.c,
         joystick.c,kempmouse.c,melodik.c,printer.c,scld.c,speccyboot.c,
         specdrum.c,spectranet.c,ula.c,usource.c}: add C99-style named
         initialisers in comments (Stuart).